--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,6 +44,8 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp",
-        "ctime": "cpp"
+        "ctime": "cpp",
+        "map": "cpp",
+        "set": "cpp"
     }
 }
